--- a/MSService/style.css
+++ b/MSService/style.css
@@ -1,6 +1,10 @@
 .topheader {
     width: 100%;
     height: 100px;
+    z-index: 99999;
+    position: fixed;
+    background: white;
+    transition: 0.3s;
 }
 
 .head {
@@ -47,7 +51,13 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: F4F4F4;
+    background-color: lightgrey;
     top: 100px;
     left: 0;
+}
+
+.back {
+    margin-top: 100px;
+    width: 100%;
+    height: calc(100vh - 100px);
 }
