--- a/MSService/style.css
+++ b/MSService/style.css
@@ -1,3 +1,13 @@
+@media (min-width: 1200px) {
+    .container {
+        max-width: 80%;
+    }
+}
+
+.main {
+    overflow-x: hidden;
+}
+
 .topheader {
     width: 100%;
     height: 100px;
@@ -58,6 +68,133 @@
 
 .back {
     margin-top: 100px;
+    object-fit: cover;
     width: 100%;
     height: calc(100vh - 100px);
+}
+
+.banner>.container {
+    position: relative;
+}
+
+.content {
+    position: absolute;
+    left: 5%;
+    right: 5%;
+    bottom: 58.02%;
+    height: 100%;
+}
+
+.content .top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.banner .text {
+    font-style: normal;
+    font-weight: bold;
+    color: #000000;
+}
+
+@media (max-width: 1400px) {
+    .phone {
+        height: 550px;
+    }
+    .content {
+        top: 17%;
+    }
+    .banner .comment {
+        top: 270px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .phone {
+        height: 600px;
+        padding-left: 100px;
+    }
+    .content {
+        top: 19%;
+    }
+    .banner .comment {
+        top: 270px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .phone {
+        display: none;
+    }
+}
+
+@media (min-width: 1000px) {
+    .phone {
+        padding-left: 100px;
+    }
+    .banner .text {
+        font-size: 45px;
+        line-height: 70px;
+    }
+    .ostav {
+        width: 480px;
+        height: 80px;
+        top: 450px;
+    }
+    .ostav p {
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 1000px) {
+    .banner .text {
+        position: absolute;
+        left: calc(10% / 2);
+        font-size: 43px;
+        line-height: 50px;
+    }
+    .banner .comment {
+        position: absolute;
+        left: calc(10% / 2);
+        top: 240px;
+    }
+    .ostav {
+        width: 90%;
+        height: 65px;
+        top: 400px;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+    .ostav p {
+        font-size: 16px;
+        line-height: 23px;
+        text-align: center;
+    }
+}
+
+.banner .comment {
+    position: absolute;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 46px;
+    padding-top: 30px;
+    /* identical to box height */
+    color: #000000;
+}
+
+.ostav {
+    position: absolute;
+    background-color: #5F2EEA;
+    border-radius: 10px;
+}
+
+.ostav p {
+    position: absolute;
+    color: white;
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
