--- a/MSService/style.css
+++ b/MSService/style.css
@@ -64,6 +64,74 @@ section {
     top: -16px
 }
 
+.menu {
+    position: absolute;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: 0 0;
+    transition: all .3s;
+    background-color: #373434;
+    height: 100vh;
+    width: 400px;
+    color: white;
+    z-index: 2;
+}
+
+.active {
+    transform: scaleX(1);
+}
+
+.menu ul {
+    margin-top: 100px;
+    list-style-type: none;
+}
+
+.menu li {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: left;
+    color: #B8BBBA;
+    margin-bottom: 10px;
+    margin-right: 40px;
+    cursor: pointer;
+}
+
+.menu li:nth-child(2),
+.menu li:nth-child(3),
+.menu li:nth-child(4),
+.menu li:nth-child(5),
+.menu li:nth-child(6) {
+    border-top: 2px solid #535052;
+}
+
+.krst {
+    position: absolute;
+    width: 34px;
+    height: 32px;
+    left: 342px;
+    top: 50px;
+}
+
+.krest {
+    position: absolute;
+    height: 4px;
+    width: 42px;
+    transform: rotate(43deg);
+    background-color: white;
+}
+
+.krest::after {
+    content: '';
+    position: absolute;
+    height: 4px;
+    width: 42px;
+    transform: rotate(-86deg);
+    background-color: white;
+    transition: transform .3s, top .3s;
+}
+
 .account {
     margin-top: 26px;
 }
@@ -75,6 +143,7 @@ section {
     background-color: lightgrey;
     top: 100px;
     left: 0;
+    z-index: 0;
 }
 
 
@@ -84,7 +153,7 @@ section {
     margin-top: 100px;
     object-fit: cover;
     width: 100%;
-    height: calc(100vh - 100px);
+    height: 95vh;
 }
 
 .banner>.container {
@@ -115,7 +184,7 @@ section {
         height: 550px;
     }
     .main .content {
-        top: 17%;
+        top: 12%;
     }
     .banner .comment {
         top: 270px;
@@ -171,12 +240,12 @@ section {
     .banner .comment {
         position: absolute;
         left: calc(10% / 2);
-        top: 240px;
+        top: 200px;
     }
     .ostav {
         width: 90%;
         height: 65px;
-        top: 400px;
+        top: 350px;
         left: 50%;
         transform: translate(-50%, 0);
     }
@@ -270,14 +339,25 @@ section {
     text-decoration: none;
 }
 
+@media (min-width: 992px) {
+    .partner p {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 992px) {
+    .partner p {
+        font-size: 29px;
+    }
+}
+
 .partner p {
     font-style: normal;
     font-weight: bold;
-    font-size: 40px;
     line-height: 59px;
     text-align: center;
     transition: text-shadow 1s;
-    color: transparent;
+    color: gray;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -341,4 +421,220 @@ section {
 .neef:hover,
 .lg:hover {
     text-shadow: none;
+}
+
+
+/* obrat-svaz section*/
+
+.toggle {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.toggle p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 29px;
+    text-align: center;
+    color: #000000;
+}
+
+.checkbox-ios {
+    display: inline-block;
+    line-height: 28px;
+    margin-left: 10px;
+    margin-right: 15px;
+    margin-top: 5px;
+    position: relative;
+    vertical-align: middle;
+    font-size: 14px;
+    user-select: none;
+}
+
+.checkbox-ios .checkbox-ios-switch {
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 56px;
+    height: 28px;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-radius: 25%/50%;
+    vertical-align: top;
+    background: #eee;
+    transition: .2s;
+}
+
+.checkbox-ios .checkbox-ios-switch:before {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: white;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
+    transition: .15s;
+}
+
+.checkbox-ios input[type=checkbox] {
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.checkbox-ios input[type=checkbox]:not(:disabled):active+.checkbox-ios-switch:before {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, .3);
+}
+
+.checkbox-ios input[type=checkbox]:checked+.checkbox-ios-switch {
+    background: #5F2EEA;
+}
+
+.checkbox-ios input[type=checkbox]:checked+.checkbox-ios-switch:before {
+    transform: translateX(28px);
+}
+
+
+/* Hover */
+
+.checkbox-ios input[type="checkbox"]:not(:disabled)+.checkbox-ios-switch {
+    cursor: pointer;
+    border-color: rgba(0, 0, 0, .3);
+}
+
+
+/* Disabled */
+
+.checkbox-ios input[type=checkbox]:disabled+.checkbox-ios-switch {
+    filter: grayscale(70%);
+    border-color: rgba(0, 0, 0, .1);
+}
+
+.checkbox-ios input[type=checkbox]:disabled+.checkbox-ios-switch:before {
+    background: #eee;
+}
+
+
+/**/
+
+.textinput {
+    margin: 40px 0;
+}
+
+.obrat-svaz form p {
+    font-size: 25px;
+    font-weight: 700;
+    color: #696969;
+    margin-bottom: 5px;
+}
+
+.obrat-svaz span {
+    color: #f6744b;
+    margin-left: 5px;
+}
+
+.textinput input {
+    border: 0;
+    border-bottom: 1px solid #cacaca;
+    width: 90%;
+    height: 40px;
+    outline: 0;
+}
+
+#name {
+    margin-bottom: 30px;
+}
+
+.list {
+    background-color: #5F2EEA;
+    transform: scaleY(0);
+    transform-origin: 0 0;
+    width: 90%;
+    transition: all .3s;
+    color: whitesmoke;
+    list-style-type: none;
+    font-size: 20px;
+    cursor: pointer;
+    line-height: 35px;
+}
+
+.second:hover .list {
+    transform: scaleY(1);
+}
+
+@media (max-width:576px) {
+    .submit {
+        width: 230px;
+    }
+}
+
+@media (min-width: 576px) {
+    .submit {
+        width: 480px;
+    }
+}
+
+.submit {
+    /* Кнопка отправки формы */
+    height: 50px;
+    letter-spacing: 1px;
+    /* Межсимвольный интервал */
+    background: #5F2EEA;
+    border: 2px solid #5F2EEA;
+    border-radius: 10px;
+    color: #fff;
+    display: block;
+    margin: 0px auto 0;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.submit:hover {
+    color: #5F2EEA;
+    transition: 0.5s;
+    background: whitesmoke;
+}
+
+
+/*office section*/
+
+.office .name {
+    margin-bottom: 20px;
+}
+
+.office {
+    margin-bottom: 0;
+}
+
+
+/* footer */
+
+footer {
+    margin-top: 0;
+    background-color: #000000;
+    width: 100%;
+    height: 170px;
+    top: 0;
+}
+
+footer .img-footer {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin-top: 15px;
+}
+
+footer .number {
+    position: absolute;
+    margin-top: 110px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    color: white;
 }
