--- a/MSService/style.css
+++ b/MSService/style.css
@@ -33,6 +33,13 @@ section {
     justify-content: space-between;
 }
 
+.logo {
+    display: flex;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
 .burger {
     height: 32px;
     width: 50px;
@@ -144,8 +151,8 @@ section {
 .account-login {
     position: absolute;
     left: 50%;
-    top: 100%;
-    transform: translate(-50%, -10%);
+    top: 35%;
+    transform: translate(-50%, 0);
     height: 615px;
     width: 548px;
     background: linear-gradient(180deg, #7478FD 0%, #AF23F0 100%), #FFFFFF;
@@ -698,8 +705,7 @@ footer .number {
 
 .login {
     width: calc(91% - 41px) !important;
-    margin-left: 52.7%;
-    transform: translate(-50%, 0);
+    margin-left: 60px;
     outline: 0;
     border: 0;
     background-color: transparent;
@@ -731,8 +737,7 @@ footer .number {
 .password {
     width: calc(91% - 41px) !important;
     margin-top: 30px;
-    margin-left: 52.7%;
-    transform: translate(-50%, 0);
+    margin-left: 60px;
     outline: 0;
     border: 0;
     background-color: transparent;
@@ -807,4 +812,63 @@ footer .number {
     transform: translate(-50%, 0);
     color: #FFFFFF;
     cursor: pointer;
+}
+
+@media (max-width: 575px) {
+    .account-login {
+        width: 90vw;
+        height: 90vh;
+    }
+    .logo {
+        display: none;
+    }
+    .forgot {
+        font-size: 14px;
+    }
+    .sign_up {
+        font-size: 14px;
+    }
+    .menu {
+        width: 100%;
+    }
+    .krst {
+        left: 85%
+    }
+}
+
+.user {
+    margin-top: 33px;
+    cursor: pointer;
+}
+
+.user-name {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 29px;
+    color: #000000;
+}
+
+.user-img {
+    margin-left: 10px !important;
+    margin-top: -9px;
+    width: 50px;
+    height: 50px;
+}
+
+.menu-user {
+    position: absolute;
+    width: 389px;
+    height: 375px;
+    background-color: #FFFFFF;
+    border: 2px solid #A6A6A6;
+    right: 10%;
+    z-index: 3;
+    border-radius: 10px;
+    top: 100px;
+}
+
+.out {
+    position: absolute;
+    bottom: 10px;
+    color: #ED1D25;
 }
