--- a/MSService/style.css
+++ b/MSService/style.css
@@ -151,8 +151,8 @@ section {
 .account-login {
     position: absolute;
     left: 50%;
-    top: 35%;
-    transform: translate(-50%, 0);
+    top: 50vh;
+    transform: translate(-50%, -50%);
     height: 615px;
     width: 548px;
     background: linear-gradient(180deg, #7478FD 0%, #AF23F0 100%), #FFFFFF;
@@ -263,7 +263,7 @@ section {
     .banner .comment {
         position: absolute;
         left: calc(10% / 2);
-        top: 200px;
+        top: 230px;
     }
     .ostav {
         width: 90%;
@@ -726,7 +726,7 @@ footer .number {
     position: absolute;
     width: 30px;
     height: 1px;
-    margin-top: 38.5px;
+    margin-top: 39.4px;
     margin-left: 30px;
     background-color: #c9c3e0;
 }
@@ -758,9 +758,15 @@ footer .number {
     position: absolute;
     width: 30px;
     height: 1px;
-    margin-top: 68.5px;
+    margin-top: 69.4px;
     margin-left: 30px;
     background-color: #c9c3e0;
+}
+
+.warning {
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: -20px;
 }
 
 .know-me {
@@ -814,13 +820,16 @@ footer .number {
     cursor: pointer;
 }
 
+@media (max-width: 768px) {
+    .logo {
+        display: none;
+    }
+}
+
 @media (max-width: 575px) {
     .account-login {
         width: 90vw;
         height: 90vh;
-    }
-    .logo {
-        display: none;
     }
     .forgot {
         font-size: 14px;
@@ -853,22 +862,50 @@ footer .number {
     margin-top: -9px;
     width: 50px;
     height: 50px;
+    margin-right: 15px;
+    border-radius: 50%;
 }
 
 .menu-user {
     position: absolute;
-    width: 389px;
-    height: 375px;
     background-color: #FFFFFF;
     border: 2px solid #A6A6A6;
-    right: 10%;
     z-index: 3;
     border-radius: 10px;
-    top: 100px;
+    margin-left: -9px;
+    width: 164px;
 }
 
-.out {
-    position: absolute;
-    bottom: 10px;
+.log-out {
     color: #ED1D25;
+    padding-top: 10px;
+    margin-bottom: 0;
+}
+
+.menu-user ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-bottom: 7px;
+    font-size: 19px;
+    line-height: 27px;
+}
+
+.menu-user li {
+    cursor: pointer;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.menu-user li a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu-user li p:nth-child(1) {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: black;
 }
