--- a/MSService/account/style-account.css
+++ b/MSService/account/style-account.css
@@ -242,17 +242,41 @@
     border-radius: 50px;
 }
 
+.account-img {
+    border-radius: 50%;
+}
+
 .no-img {
     height: 250px;
     width: 250px;
     font-size: 170px;
     background: #f6f5f3;
-    border-radius: 2px solid #D9D9D9;
+    border: 2px solid #D9D9D9;
     font-family: sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+}
+
+.add-img {
+    display: flex;
+    justify-content: center;
+}
+
+.image {
+    max-width: 280px;
+}
+
+.img-screen {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 65vw;
+    background: white;
+    height: 35vw;
+    z-index: 2;
 }
 
 .content {
@@ -263,13 +287,6 @@
 .information {
     padding-top: 30px;
     padding-bottom: 75px;
-    padding-left: 20px;
-}
-
-@media (max-width: 1330px) and (min-width: 992px) {
-    .information {
-        padding-left: 50px;
-    }
 }
 
 .name h1,
