--- a/MSService/account/style-account.css
+++ b/MSService/account/style-account.css
@@ -307,3 +307,12 @@
 .password {
     margin-top: 30px;
 }
+
+
+/* windows */
+
+.change-img .img {
+    background: url(../images/cloud-download.svg);
+    background-size: cover;
+    width: 200px;
+}
