--- a/MSService/account/style-account.css
+++ b/MSService/account/style-account.css
@@ -14,7 +14,7 @@
 .topheader {
     width: 100%;
     height: 100px;
-    z-index: 99999;
+    z-index: 4;
     position: fixed;
     background: white;
     transition: 0.3s;
@@ -286,7 +286,7 @@
 }
 
 .email_phone {
-    margin-top: 30px;
+    margin-top: 80px;
 }
 
 .email_phone p {
@@ -300,6 +300,17 @@
 
 /* windows */
 
+@media (max-width: 991px) {
+    .upload-img {
+        width: 85%;
+        height: 80%;
+    }
+    .drag-area {
+        width: 70%;
+        width: 80%;
+    }
+}
+
 .upload-img {
     position: absolute;
     height: 600px;
@@ -309,6 +320,7 @@
     transform: translate(-50%, -50%);
     background: #5256ad;
     z-index: 4;
+    border-radius: 20px;
 }
 
 .drag-area {
@@ -321,7 +333,7 @@
     height: 400px;
     width: 600px;
     left: 50%;
-    top: 52%;
+    top: 45%;
     transform: translate(-50%, -50%);
     border-radius: 20px;
     -webkit-box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.75);
@@ -374,7 +386,7 @@
 .submit {
     position: absolute;
     left: 50%;
-    bottom: 2%;
+    bottom: 6%;
     transform: translate(-50%, 0);
 }
 
@@ -382,4 +394,207 @@
     right: 10px;
     top: 0;
     left: auto;
+    cursor: pointer;
 }
+
+
+/* Login */
+
+@media (max-width: 575px) {
+    .account-login {
+        width: 90vw;
+        height: 90vh;
+    }
+    .forgot {
+        font-size: 14px;
+    }
+    .sign_up {
+        font-size: 14px;
+    }
+}
+
+.account {
+    margin-top: 26px;
+    cursor: pointer;
+}
+
+.account-login {
+    position: absolute;
+    left: 50%;
+    top: 50vh;
+    transform: translate(-50%, -50%);
+    height: 615px;
+    width: 548px;
+    background: url(../images/Frame1.png);
+    border-radius: 15px;
+    z-index: 2;
+}
+
+.account-login .row {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+}
+
+.account-login .name {
+    color: white;
+    margin-top: 50px;
+}
+
+.name {
+    text-align: center;
+}
+
+.textinput {
+    margin: 40px 0;
+}
+
+.textinput input {
+    border: 0;
+    border-bottom: 1px solid #cacaca;
+    width: 90%;
+    height: 40px;
+    outline: 0;
+    border-radius: 0;
+}
+
+.name-polz {
+    width: 100% !important;
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    color: white;
+}
+
+.name-polz::placeholder {
+    color: white;
+}
+
+.surname {
+    width: 100% !important;
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    color: white;
+}
+
+.surname::placeholder {
+    color: white;
+}
+
+.svg-nm {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 31.5px;
+}
+
+.border-ln-1 {
+    position: absolute;
+    width: 30px;
+    height: 1px;
+    margin-top: 39px;
+    margin-left: 30px;
+    background-color: #c9c3e0;
+}
+
+.login {
+    width: calc(91% - 41px) !important;
+    margin-left: 60px;
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    color: white;
+}
+
+.login::placeholder {
+    color: white;
+}
+
+.svg-ps {
+    position: absolute;
+    margin-top: 41px;
+    margin-left: 31.5px;
+}
+
+.border-ln-2 {
+    position: absolute;
+    width: 30px;
+    height: 1px;
+    margin-top: 69px;
+    margin-left: 30px;
+    background-color: #c9c3e0;
+}
+
+.password {
+    width: calc(91% - 41px) !important;
+    margin-top: 30px;
+    margin-left: 60px;
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    color: white;
+}
+
+.password::placeholder {
+    color: white;
+}
+
+.warning {
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: -20px;
+}
+
+.know-me {
+    margin-left: 35px;
+}
+
+.know-me-txt {
+    margin-top: -25px;
+    margin-left: 60px;
+    color: white;
+}
+
+.log-in {
+    display: flex;
+    width: 184px;
+    height: 46px;
+    border-radius: 25px;
+    background-color: white;
+    margin-top: 30px;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.log-in p {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-style: normal;
+    font-weight: 620;
+    font-size: 20px;
+    text-align: center;
+    color: #000000;
+}
+
+.forgot {
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    transform: translate(-50%, 0);
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.sign_up {
+    position: absolute;
+    left: 50%;
+    bottom: 3px;
+    transform: translate(-50%, 0);
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+
+/* End login */
