--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ section {
 
 .banner {
     width: 100%;
-    background: url(https://img.freepik.com/free-photo/close-up-hardware-component-background_23-2148882663.jpg?size=1920&ext=jpg);
+    background: url(back.webp);
     background-size: cover;
 }
 
